vertical alignment fix

--- a/AnthonyCakes2/app/components/app-root/app-root.component.scss
+++ b/AnthonyCakes2/app/components/app-root/app-root.component.scss
@@ -16,7 +16,6 @@
     }
 
     &_content {
-        align-items: center;
         background-color: $clr-content;
         display: flex;
         flex: 1;
