--- a/AnthonyCakes2/app/components/gallery/gallery.component.scss
+++ b/AnthonyCakes2/app/components/gallery/gallery.component.scss
@@ -1,50 +1,46 @@
 ﻿@import '../../common/variables';
 
-gallery {
+.gallery {
     height: 100%;
-    
-    .gallery {
-        height: 100%;
 
-        .card-columns {
-            -webkit-column-count: 1;
-            -moz-column-count: 1;
-            column-count: 1;
-            -webkit-column-gap: 0;
-            -moz-column-gap: 0;
-            column-gap: 0;
+    .card-columns {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        -webkit-column-gap: 0;
+        -moz-column-gap: 0;
+        column-gap: 0;
 
-            @media (min-width: $mbp-sm) {
-                -webkit-column-count: 2;
-                -moz-column-count: 2;
-                column-count: 2;
-            }
-            @media (min-width: $mbp-md) {
-                -webkit-column-count: 3;
-                -moz-column-count: 3;
-                column-count: 3;
-            }
-            @media (min-width: $mbp-lg) {
-                -webkit-column-count: 4;
-                -moz-column-count: 4;
-                column-count: 4;
-            }
-            @media (min-width: $mbp-xl) {
-                -webkit-column-count: 5;
-                -moz-column-count: 5;
-                column-count: 5;
-            }
+        @media (min-width: $mbp-sm) {
+            -webkit-column-count: 2;
+            -moz-column-count: 2;
+            column-count: 2;
+        }
+        @media (min-width: $mbp-md) {
+            -webkit-column-count: 3;
+            -moz-column-count: 3;
+            column-count: 3;
+        }
+        @media (min-width: $mbp-lg) {
+            -webkit-column-count: 4;
+            -moz-column-count: 4;
+            column-count: 4;
+        }
+        @media (min-width: $mbp-xl) {
+            -webkit-column-count: 5;
+            -moz-column-count: 5;
+            column-count: 5;
+        }
 
-            @media (min-width: $mbp-lg) {
-                &:hover,
-                &:focus {
-                    .card {
-                        opacity: .5;
+        @media (min-width: $mbp-lg) {
+            &:hover,
+            &:focus {
+                .card {
+                    opacity: .5;
 
-                        &:hover,
-                        &:focus {
-                            opacity: 1;
-                        }
+                    &:hover,
+                    &:focus {
+                        opacity: 1;
                     }
                 }
             }
